syntax = "proto3";

package hubscreen;

message Led_t {
    int32 state = 1;
    string id = 2;
    string name = 3;
}
message Switch_t {
    int32 state = 4;
    string id = 5;
    string name = 6;
}
message Command {
    string action = 7;
    string sender = 8;
    string receiver = 9;
    repeated Switch_t sw_device = 10;
    repeated Led_t led_device = 11;
}

message Response {
    string status = 12;
    string message = 13;
}