syntax = "proto3";

package hubscreen;

message Led_t {
    int32 pin = 1;
    bool state = 2;
    string id = 3;
}
message Switch_t {
    int32 pin = 4;
    bool state = 5;
    string id = 6;
}
message Command {
    string device_id = 1;
    string action = 2;
    string service = 3;
}

message Response {
    string status = 1;
    string message = 2;
}